# calculator-compilator

./: .gitignore  CMakeLists.txt  Comands.txt  README.md  dump.txt  file_1.txt  file_2.txt  main.c
include/: expression_parser.h  generate_assembly.h  operations.h
include/operations/: add_operation.h  div_int_operation.h  div_operation.h  multiply_operation.h  power_operation.h  rem_operation.h  subtract_operation.h
include/utils/: expression_parser.h  file_utils.h  float_conversions.h  serial_operations.h  stack_operations.h
src/: expression_parser.c  file_utils.c  float_conversions.c  generate_assembly.c  operations.c  serial_operations.c  stack_operations.c
src/operations/: add_operation.c  div_int_operation.c  div_operation.c  multiply_operation.c  power_operation.c  rem_operation.c  subtract_operation.c
src/utils/: expression_parser.c  file_utils.c  float_conversions.c  serial_operations.c  stack_operations.c
test-files/: file_1.txt  file_2.txt  file_3.txt
